2005-05-30  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/src/GrampsBSDDB.py (upgrade_7): Handle case of not set default person

2005-05-28  Alex Roitman  <shura@gramps-project.org>
	* src/RelLib.py: Delegate event handle reference lookup from
	Person to EventRef class; (RepoRef.get_handle_referents): Remove
	unneeded method (inherited from BaseObject).

2005-05-27  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/RelLib.py: RepoRef now derives BaseObject to enable full-text
	search
	* src/GenericFilter.py: Enable Repositories in full-text search filter
	* src/RelLib.py: Move constants from RelLib to const
	* src/plugins/TestcaseGenerator.py: Move constants from RelLib to const
	* src/gramps.glade: Add ScrolledWindow to RepositoryView to make it
	look like Source and Place View.
	* src/const.py.in: Replace static definition of lds_temple_to_abrev by
	dynamic generation from lds_temple_codes so they need to be defined
	only once.

2005-05-27  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsBSDDB.py (upgrade_7): Add upgrade path for repo changes.
	* src/const.py.in: Define integer constants for standard events.
	* gramps.glade: Resolve merge conflicts.
	* src/GrampsBSDDB.py (upgrade_*): Use transaction for commits.
	* src/const.py.in: Get rid of TransTable use in favor of int contsants.
	* src/GrampsBSDDB.py (upgrade_2): Use proper constants.
	* src/RelLib.py: Move constants out to const.py.in.

	* src/ChooseParents.py: Fix constants.
	* src/FamilyView.py: Fix constants.
	* src/PedView.py: Fix constants.
	* src/ReadGedcom.py: Fix constants.
	* src/ReadXML.py: Fix constants.
	* src/SelectChild.py: Fix constants.
	* src/WriteXML.py: Fix constants.

	* src/GrampsBSDDB.py (upgrade_7): Enforce str for the default handle.

2005-05-27  Richard Taylor <rjt-gramps@thegrindstone.me.uk>
	* src/EditRepository.py: polish Repository Ref UI
	* src/RelLib.py: merge minor changes from HEAD
	* src/RepositoryRefEdit.py: polish Repository Ref UI